# backtest-lib

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: build-and-deploy-docs.yml  build-docs.yml  ci-lint-typecheck.yml  clear-notebooks.yml  publish-package.yml  unit-tests.yml
docs/: open_docs.py
docs/assets/data/: spot_prices.csv
docs/source/: conf.py  index.md  index.rst
docs/source/_templates/autosummary/: data.rst
docs/source/reference/: index.md  index.rst
docs/source/reference/backtest/: index.rst  results.rst  schedule.rst  settings.rst
docs/source/reference/decision/: index.rst
docs/source/reference/engine/: index.rst
docs/source/reference/engine/decision/: index.rst
docs/source/reference/engine/execute/: index.rst
docs/source/reference/engine/plan/: index.rst
docs/source/reference/market/: axis_policy.rst  by_period.rst  by_security.rst  index.rst  past_view.rst  plotting.rst
docs/source/reference/portfolio/: index.rst
docs/source/reference/strategy/: decision.rst  index.rst
docs/source/reference/universe/: index.rst
documents/: background.md  design.md
src/backtest_lib/: __init__.py
src/backtest_lib/audit/: lookahead_bias.py
src/backtest_lib/backtest/: __init__.py  _helpers.py  results.py  schedule.py  settings.py
src/backtest_lib/decision/: __init__.py
src/backtest_lib/decision/execute/: __init__.py
src/backtest_lib/engine/: __init__.py
src/backtest_lib/engine/decision/: __init__.py
src/backtest_lib/engine/execute/: __init__.py  perfect_world.py
src/backtest_lib/engine/plan/: __init__.py  perfect_world.py
src/backtest_lib/examples/: __init__.py  engine_tests.ipynb  ewma.ipynb  full_sp500_test.ipynb  fx.ipynb  fx_spot.pkl  get_sp500_historical.py  hold.py  new_syntax_test.ipynb  ordering_tests.ipynb  schedule_tests.ipynb  sp500.ipynb  sp500_changes.pkl  sp500_close.pkl  sp500_const.pkl  sp500_constituents.txt  sp500_historical_const.ipynb  trades_tests.ipynb
src/backtest_lib/market/: __init__.py  _backends.py  plotting.py  polars_impl.py  timeseries.py
src/backtest_lib/market/polars_impl/: __init__.py  _axis.py  _helpers.py  _past_view.py  _plotting.py  _timeseries.py  _universe_mapping.py
src/backtest_lib/portfolio/: __init__.py
src/backtest_lib/strategy/: __init__.py  context.py  decision.py
src/backtest_lib/universe/: __init__.py  universe_mapping.py  vector_mapping.py  vector_ops.py
tests/: conftest.py
tests/benchmark/polars_impl/: test_universe_mapping_benchmark.py
tests/data/: simple_market.csv  single_security.csv
tests/e2e/: short_schedule_test.py  test_returns_track_price.py
tests/engine/plan/: test_perfect_world_plan_generator.py
tests/market/polars_impl/: test_axis.py
tests/unit/backtest/: test_results_persistence.py  test_schedule.py
tests/unit/engine/decision/: test_decision.py
tests/unit/engine/execute/: test_perfect_world_executor.py
tests/unit/market/: test_axis_policy.py  test_market_view.py
tests/unit/market/polars_impl/: test_plotting.py  test_polars_past_view.py  test_polars_timeseries.py  test_polars_universe_mapping.py
tests/unit/portfolio/: test_portfolio.py
