[project]
name = "backtest-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "jathoms", email = "james@getkbm.io" }]
dependencies = [
  "numpy>=2.3.2",
  "polars>=1.32.3",
]

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "lxml>=6.0.0",
  "pandas>=2.3.1",
  "ruff>=0.12.8",
  "ty>=0.0.1a17",
  "yfinance>=0.2.65",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
