[project]
name = "backtest-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "jathoms", email = "james@getkbm.io" }]
dependencies = [
  "altair>=5.5.0",
  "croniter>=6.0.0",
  "numpy>=2.3.2",
  "polars>=1.32.3",
  "python-dateutil>=2.9.0.post0",
  "vegafusion>=2.0.3",
  "vl-convert-python>=1.8.0",
]

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "pyarrow>=21.0.0",
  "lxml>=6.0.0",
  "pandas>=2.3.1",
  "ruff>=0.12.8",
  "ty>=0.0.1a17",
  "yfinance>=0.2.65",
  "mypy>=1.17.1",
  "pyright>=1.1.404",
  "pyrefly>=0.29.2",
  "altair>=5.5.0",
]
docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.src]
include = ["src"]
exclude = ["src/backtest_lib/examples/*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
exclude = ["src/backtest_lib/examples/*"]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]
ignore = ["EM101"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    '**/*venv*/**',
    "**/*.ipynb"
]
