[project]
name = "backtest-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "jathoms", email = "james@getkbm.io" }]
dependencies = [
  "altair>=5.5.0",
  "croniter>=6.0.0",
  "numpy>=2.3.2",
  "polars>=1.32.3",
  "python-dateutil>=2.9.0.post0",
  "vegafusion>=2.0.3",
  "vl-convert-python>=1.8.0",
]

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "lxml>=6.0.0",
  "mypy>=1.17.1",
  "pandas>=2.3.1",
  "pandas-stubs>=2.3.3.251201",
  "pre-commit>=3.6.0",
  "pyarrow>=21.0.0",
  "pyrefly>=0.29.2",
  "pyright>=1.1.404",
  "pytest>=8.3.0",
  "pytest-benchmark>=5.2.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.12.8",
  "ty>=0.0.1a17",
  "types-croniter>=6.0.0.20250809",
  "types-python-dateutil>=2.9.0.20251115",
  "yfinance>=0.2.65",
]
docs = [
  "pydata-sphinx-theme>=0.16.1",
  "sphinx>=8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["backtest_lib"]
branch = true
omit = ["src/backtest_lib/examples/*"]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
  "**/node_modules",
  "**/__pycache__",
  "**/*venv*/**",
  "**/*.ipynb",
  "src/backtest_lib/examples/*",
]

[tool.pytest]
addopts = ["-m", "not benchmark"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
exclude = ["src/backtest_lib/examples/*"]
select = [
  "E",
  "F",
  "UP",
  "B",
  "SIM",
  "I",
]
ignore = ["EM101"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.src]
include = ["src"]
exclude = ["src/backtest_lib/examples/*"]
